css/vastgrimm.css
/* ... */
#sidebar-tabs > .item.active {
  color: var(--highlight-foreground-color);
  background: var(--highlight-background-color);
  border: 1px solid var(--highlight-background-color);
  border-bottom: none;
  box-shadow: 0 0 6px inset var(--highlight-background-color);
  text-shadow: 0 0 10px var(--highlight-background-color);
}

.sidebar-tab .action-buttons button {
  background: var(--sidebar-button-background-color);
  color: var(--sidebar-button-foreground-color);
  border-radius: 0;
  font-family: var(--h3-font);
  font-size: 12px;
}

.sidebar-tab .directory-header .header-search input {
  background: var(--sidebar-button-background-color);
  color: var(--sidebar-button-foreground-color);
  border: 1px solid #252525;
  border-radius: 0;
  font-family: var(--h3-font);
}

.sidebar-tab .directory-header .header-search input[type=text]:focus {
  box-shadow: 0 0 5px var(--highlight-background-color);
}

.sidebar-tab .directory-list .directory-item h4 {
  font-family: var(--item-font);
}

.tabs .item.active,
.tabs .item:hover {
  text-shadow: 0 0 10px var(--highlight-background-color);
}

::-webkit-scrollbar-thumb {
  outline: none;
  border-radius: 3px;
  background: var(--highlight-background-color) !important;
  border: 1px solid var(--background-color) !important;
  color: var(--highlight-foreground-color) !important;
}

.window-app .window-content {
  background: var(--background-color);
  color: var(--foreground-color);
}

/* ================== 11. JOURNAL ENTRIES =================== */
.window-app.app.journal-sheet .window-content {
  background: var(--foreground-color);
  color: var(--background-color);
  background-position: -43px -120px;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  overflow-y: hidden;
  padding: 0px;
  margin: 0px;
  font-family: var(--item-font);
  font-weight: 500;
  font-size: 14px;
  line-height: 1.5;
}

.window-app.app.journal-sheet .window-content h1 {
  font-family: var(--h3-font);
  border-bottom: 2px solid #222222;
}

.window-app.app.journal-sheet .window-content h2 {
  border-bottom: 1px solid #252525;
}

.journal-sheet form button[type=submit] {
  background: var(--background-color);
}

.journal-sheet form input[name=name] {
  color: var(--background-color);
  font-family: var(--h3-font);
  font-size: 32px;
}

.journal-sheet form select {
  font-family: var(--item-font);
}

a.entity-link,
a.inline-roll {
  background: var(--background-color);
  color: var(--foreground-color);
  padding: 1px 4px;
  border: 1px solid var(--background-color);
  border-radius: 2px;
  white-space: nowrap;
  word-break: break-all;
}
.vastgrimm.sheet .window-content {
  overflow-y: hidden;
  padding: 5px;
  /* inherited background is parchment img bg */
  background: var(--window-background);
  font-size: 13px;
  color: var(--foreground-color);
  border-bottom: 1px solid #222222;
  border-left: 1px solid #222222;
  border-right: 1px solid #222222;
}

.vastgrimm.sheet .window-content form {
  height: 100%;
  overflow: hidden;
}

.vastgrimm.sheet {
  margin-top: 0;
}

.vastgrimm.sheet .editable .rollable:hover {
  color: var(--highlight-foreground-color);
  text-shadow: 0 0 10px var(--highlight-background-color);
  cursor: pointer;
}

.vastgrimm.sheet input[type=text],
.vastgrimm.sheet input[type=number],
.vastgrimm.sheet input[type=password],
.vastgrimm.sheet input[type=date] {
  color: var(--foreground-color);
  border-radius: 0;
}

.vastgrimm.sheet input[type=text]:focus,
.vastgrimm.sheet input[type=number]:focus,
.vastgrimm.sheet input[type=password]:focus,
.vastgrimm.sheet input[type=date]:focus,
.vastgrimm.sheet input[type=time]:focus,
.vastgrimm.sheet input[type=text]:hover,
.vastgrimm.sheet input[type=number]:hover,
.vastgrimm.sheet input[type=password]:hover,
.vastgrimm.sheet input[type=date]:hover,
.vastgrimm.sheet input[type=time]:hover {
  box-shadow: 0 0 5px var(--highlight-background-color);
}

.vastgrimm.sheet select:focus {
  box-shadow: 0 0 5px var(--highlight-background-color);
}

.vastgrimm.sheet button:hover,
.vastgrimm.sheet button:focus {
  box-shadow: 0 0 5px var(--highlight-background-color);
}

.vastgrimm.sheet a:hover {
  text-shadow: 0 0 8px var(--highlight-background-color);
}

.vastgrimm.sheet textarea {
  border: 1px solid #7a7971;
  border-radius: 0;
  color: var(--foreground-color);
  font-family: var(--item-font);
  font-size: 14px;
  resize: none;
}

.vastgrimm.sheet textarea:hover {
  box-shadow: 0 0 5px var(--highlight-background-color);
}

.vastgrimm.sheet textarea:focus {
  box-shadow: 0 0 5px var(--highlight-background-color);
  outline: none;
}

.vastgrimm.sheet .profile-img {
  border: none;
}

/* ====================== */
/* TinyMCE editor */
/* ====================== */
.vastgrimm.sheet .editor {
  color: var(--foreground-color);
  border: 1px solid #7a7971;
  font-family: var(--item-font);
}

.vastgrimm.sheet .tox.tox-tinymce .tox-edit-area__iframe {
  background: var(--background-color);
}

.mce-content-body {
  overflow-wrap: break-word;
  word-wrap: break-word;
  color: var(--foreground-color);
}

.vastgrimm .editor,
.vastgrimm .editor-content {
  height: 100%;
}

.vastgrimm.sheet .editor {
  padding: 0 8px;
}

/* ====================== */
/* Sheet Tabs */
/* ====================== */
.vastgrimm.sheet .sheet-tabs {
  flex: 0 0 30px;
  margin-bottom: 5px;
  font-size: 20px;
  font-weight: 700;
  /* TODO: track down the border-top and border-bottom getting inherited on these */
  border-top: none;
  border-bottom: none;
}

.vastgrimm.sheet .sheet-tabs .item {
  border-bottom: 1px solid var(--highlight-background-color);
  font-family: var(--h2-font);
  font-size: 22px;
  height: 30px;
  padding: 0;
  width: 150px;
}

.vastgrimm.sheet .sheet-tabs .item:hover {
  color: var(--highlight-foreground-color);
  text-shadow: 0 0 10px var(--highlight-background-color);
}
/* ... */

